@@ -78,9 +78,9 @@ int pam_end(pam_handle_t *pamh, int pam_status)
 
     _pam_overwrite(pamh->xauth.name);
     _pam_drop(pamh->xauth.name);
-    _pam_overwrite_n(pamh->xauth.data, pamh->xauth.datalen);
+    _pam_overwrite_n(pamh->xauth.data, (unsigned int)pamh->xauth.datalen);
     _pam_drop(pamh->xauth.data);
-    _pam_overwrite_n(&pamh->xauth, sizeof(pamh->xauth));
+    _pam_overwrite_n((char *)&pamh->xauth, sizeof(pamh->xauth));
 
     /* and finally liberate the memory for the pam_handle structure */
 
